public/feed/styles.css
html {
  font-size: 16px;
  line-height: 1.75;
  -webkit-text-size-adjust: 100%;
}

body {
  margin: 0;
  line-height: 1.75;
  font-weight: 400;
  color: var(--txtColorA);
}

h1, h2, h3, h4, h5 {
  font-weight: 700;
  line-height: 1.3;
  margin: 3rem 0 1.38rem;
}

h1 {
  font-size: 3.052em;
}

h2 {
  font-size: 2.441em;
}

h3 {
  font-size: 1.953em;
}

h4 {
  font-size: 1.563em;
}

h5 {
  font-size: 1.25em;
}

p {
  margin-bottom: 1rem;
}

b, strong {
  font-weight: bolder;
}

small {
  font-size: 80%;
}

.d-none {
  display: none;
}

.test {
  font-size: 90%;
}

body {
  margin: 0;
  touch-action: pan-y, pan-x;
  background-color: var(--bgColorA);
}

.kUNwHA :before,
.kUNwHA :after,
.kUNwHA * {
  -webkit-box-sizing: border-box;
  -moz-box-sizing: border-box;
  box-sizing: border-box;
}

.kUNwHA textarea,
.kUNwHA input {
  outline-color: var(--baseColorA);
}

.kUNwHA img,
.kUNwHA ul,
.kUNwHA li,
.kUNwHA p,
.kUNwHA a {
  padding: 0;
  margin: 0;
  box-shadow: none;
  border: none;
  text-decoration: none;
  list-style: none;
}

/* Chrome, Safari, Edge, Opera */
.kUNwHA input::-webkit-outer-spin-button,
.kUNwHA input::-webkit-inner-spin-button {
  -webkit-appearance: none;
  margin: 0;
}

/* Firefox */
.kUNwHA input[type=number] {
  -moz-appearance: textfield;
}

.kUNwHA {
  background-repeat: repeat;
  background-size: 300px;
  background-color: var(--bgColorA);
}

.kUNwHA .kenzap-container {
  max-width: 1270px;
  padding: 0 15px 64px 15px;
  margin: 64px auto 0 auto;
}

.kUNwHA .kenzap-container.fade {
  opacity: 0.5;
}

.kUNwHA .kenzap-row {
  margin: 0 -15px;
  padding: 24px 15px;
  border-bottom: 1px solid var(--grayColorA);
}

.kUNwHA .kenzap-row:hover {
  cursor: pointer;
}

.kUNwHA .kenzap-col-5 {
  width: 40%;
}

.kUNwHA .kenzap-col-7 {
  width: 60%;
}

.kUNwHA .kenzap-col-6 {
  width: 50%;
  float: left;
  padding: 0 15px;
}

.lang-holder {
  display: inline-block;
  vertical-align: middle;
  position: absolute;
  height: 100%;
  z-index: 100000;
  background: rgba(0, 0, 0, 0.5);
  padding: 16px;
  position: fixed;
  align-items: center;
  justify-content: center;
  display: flex;
  top: 0;
  left: 0;
  bottom: 0;
  right: 0;
}

.lang-drop {
  text-align: left;
  color: #111;
  height: 100%;
  overflow: hidden;
  max-width: 1296px;
  margin: auto;
  top: auto;
  right: 8px;
  bottom: 8px;
  left: 8px;
  background-color: var(--bgColorA);
  border-radius: 4px;
  transition: all 0.1s ease;
  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.02), 0 5px 15px rgba(0, 0, 0, 0.05);
}

@media screen and (max-width: 767px) {
  .lang-drop {
    /* position: absolute; */
    top: auto;
    right: 0;
    bottom: 88.8%;
    left: 0;
    padding: 32px;
  }
}
.lang-close {
  display: none;
  position: relative;
  top: 0px;
  right: 20px;
  width: 32px;
  height: 32px;
  opacity: 0.3;
  float: right;
  right: 0px;
}

.lang-close:before {
  transform: rotate(45deg);
}

.lang-close:after {
  transform: rotate(-45deg);
}

.lang-close:before, .lang-close:after {
  position: absolute;
  left: 15px;
  content: " ";
  height: 33px;
  width: 2px;
  background-color: #333;
}

@media screen and (max-width: 767px) {
  .lang-close:before, .lang-close:after {
    height: 25px;
  }
}
@media screen and (max-width: 767px) {
  .lang-close {
    width: 25px;
    height: 25px;
  }
}
.lang-drop h2 {
  font-size: 30px;
  margin-bottom: 25px;
  letter-spacing: -1px;
}

ul.lang-post {
  height: auto;
  overflow-x: hidden;
  overflow-y: auto;
  margin-bottom: 20px;
  letter-spacing: -32em;
}

@media screen and (max-width: 767px) {
  ul.lang-post {
    padding: 0 8px;
    height: auto;
  }
}
.lang-post li {
  display: inline-block;
  vertical-align: top;
  width: 45%;
  margin: 8px;
  letter-spacing: 0;
  padding-right: 10px;
  float: left;
  background: var(--bgColorB);
  text-align: center;
  color: var(--txtColorA);
  padding: 13px 15px;
  display: block;
  border-radius: 4px;
  border: 2px solid transparent;
}

.lang-post li:hover,
.lang-post li:focus {
  background: var(--bgColorA);
  border-color: var(--baseColorA);
}

.lang-post li a {
  color: var(--txtColorA);
}

@media screen and (max-width: 450px) {
  ul.lang-post {
    padding: 8px;
    height: auto;
  }
  .lang-post li {
    width: 90%;
  }
}
.kUNwHA .cat-controls {
  overflow: hidden;
  width: 100%;
  padding: 0 15px 16px 15px;
  margin-bottom: 16px;
  position: fixed;
  top: 0;
  /* background: -moz-linear-gradient(top, rgba(255, 255, 255, 0) -50%, var(--txtColorC) 100%);
  background: -webkit-linear-gradient(top, rgba(255, 255, 255, 0) -50%, var(--txtColorC) 100%);
  background: linear-gradient(to top, rgba(255, 255, 255, 0) -50%, var(--txtColorC) 80%);  */
  background: var(--bgColorA);
}

.kUNwHA .cat-controls .tags-holder {
  position: relative;
  max-height: 62px;
}

.kUNwHA .cat-controls .slideset .slide {
  margin-right: 11px;
}

.kUNwHA .cat-controls .slideset .slide a {
  background: var(--bgColorB);
  text-align: center;
  color: var(--txtColorA);
  padding: 13px 15px;
  display: block;
  border-radius: 4px;
  border: 2px solid transparent;
}

body:not(.kp-modal) .kUNwHA .cat-controls .slideset .slide.active a {
  background: var(--bgColorA);
  border-color: var(--baseColorA);
}

.kUNwHA .cata-sub-nav {
  margin: 0;
  overflow-x: auto;
  overflow-y: hidden;
  -ms-overflow-style: -ms-autohiding-scrollbar;
  -webkit-overflow-scrolling: touch;
  white-space: nowrap;
}

.kUNwHA .cata-sub-nav .slideset {
  margin: 0;
  display: flex;
  -webkit-padding-start: 0px;
  padding: 15px 0;
}

.kUNwHA .cata-sub-nav .slideset .slide {
  display: inline-table;
}

.kUNwHA .cata-sub-nav::-webkit-scrollbar {
  display: none;
}

.kUNwHA .arrow-holder {
  position: absolute;
  right: 10px;
  margin-top: -22px;
  z-index: 99;
  top: 50%;
  margin-top: -12px;
}

.kUNwHA .dn {
  display: none !important;
}

@media screen and (max-width: 992px) {
  .kUNwHA .arrow-holder {
    right: 0;
  }
}
/* ... */

